# ibm-generative-ai

./: .buildinfo  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  24  ACTIVE_PROJECT_TEAM.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  EXTENSIONS.md  GETTING_STARTED.md  README.md  STARTER_TEAM.md  SUPPORT.md  flan-t5-xl-mpt-KtkzU1Ig-2023-07-10-14-20-09.jsonl  flan-t5-xl-mpt-KtkzU1Ig-2023-07-10-14-20-09.pt  genindex.html  index.html  innersource.yaml  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_bug_report.md  03_documentation_update.md  config.yaml
.github/workflows/: documentation.yml  e2e-test.yml  integration-test.yml  main.yml  python-publish.yml
_sources/rst_source/: genai.model.rst.txt  genai.prompt.prompt_pattern.rst.txt  genai.schemas.generate_params.rst.txt
docs/: index.html
docs/rst_source/: examples.user.html  genai.credentials.html  genai.html  genai.prompt.html  genai.schemas.descriptions.html  genai.services.service_interface.html
documentation/: Makefile
documentation/docs/: Makefile
documentation/source/: 404.rst  changelog.rst  conf.py  extensions.rst  faq.rst  getting_started.rst  index.rst  support.rst  v2_migration_guide.rst  v3_migration_guide.rst
examples/: __init__.py
examples/deployment/: __init__.py  deployed_models.py  deployment.py
examples/dev/: alter-http-communication.py  async-flaky-request-handler.py  async-flaky-responses-ordered.py  generate-all-models.py  history-async.py  load_token_env.py  logging_example.py
examples/extensions/: __init__.py
examples/extra/: __init__.py  alter_http_communication.py  custom_api_client.py  error_handling.py  logging_example.py  parallel_processing.py  service_metadata.py  service_overriding.py  shutdown_handling.py
examples/file/: __init__.py  file.py
examples/folder/: __init__.py  folder.py
examples/model/: __init__.py  model.py
examples/prompt/: __init__.py  prompt.py
examples/request/: __init__.py  request.py  request_feedback.py
examples/scratchpad/: generate_with_input_text.py
examples/system_prompt/: __init__.py  system_prompt.py
examples/tag/: __init__.py  tag.py
examples/task/: __init__.py  task.py
examples/text/: __init__.py  chat.py  compare_parameters.py  embedding.py  generation.py  generation_streaming.py  moderation.py  simple_generation.py  tokenization.py
examples/tune/: __init__.py  tune.py
examples/user/: __init__.py  alice_bob_qa.py  alice_bob_talk.py  async_callback.py  async_greetings.py  async_ordered.py  async_progressbar.py  async_tokenize.py  chat.py  complete_my_code.py  country-capital-qa.py  explain_my_code.py  files.py  generate_with_input_text.py  generate_with_moderation.py  gpt_chat_bash.py  grid_search_params.py  grid_search_params_greeating.py  history.py  huggingface_agent.py  jsonprompt.py  jsonprompt_multi.py  langchain_chat_generate.py  langchain_chat_stream.py  langchain_evaluator.py  langchain_generate.py  langchain_qa.py  langchain_rag_code.py  langchain_rag_qa.py  langchain_serialization.py  llama_index_llm.py  llama_index_stream.py  localserver.py  logprob_returns.py  many_greetings.py  model_as_string.py  model_utils.py  prompt-raw-string.py  prompt_csv_random_rows.py  prompt_from_all_csv.py  (+13 more)
rst_source/: examples.html  examples.user.html  genai.credentials.html  genai.exceptions.bam_exception.html  genai.exceptions.html  genai.html  genai.metadata.html  genai.model.html  genai.prompt.html  genai.prompt.prompt_pattern.html  genai.prompt.quickstart.annexe.html  genai.prompt.quickstart.basics.html  genai.prompt.quickstart.html  genai.schemas.descriptions.html  genai.schemas.generate_params.html  genai.schemas.history_params.html  genai.schemas.html  genai.schemas.models.html  genai.schemas.responses.html  genai.schemas.token_params.html  genai.services.html  genai.services.request_handler.html  genai.services.service_interface.html  modules.html
scripts/: check_markers.sh  docs_fix_schema_private.sh  docs_root_redirect.py  rewrite_casettes.sh
scripts/_common/: logger.py
scripts/docs_changelog_generator/: authors_by_name.yaml  config.py  generate_changelog.py  gitchangelog_config.py  mustache_rst.tpl  parse_releases.py  release_changelog.py  utils.py
scripts/docs_examples_generator/: config.py  main.py  utils.py
scripts/types_generator/: config.py  extractor.py  formatter.py  main.py  schema_aliases.yaml  schema_transformer.py  utils.py
src/genai/: __init__.py  _types.py  _version.py  client.py  credentials.py  exceptions.py  metadata.py  model.py  options.py  prompt_pattern.py  utils.py
tests/: conftest.py  helpers.py  test_concurrent.py  test_credentials.py  test_files.py  test_generate_schema.py  test_generate_service.py  test_history.py  test_json_utils.py  test_langchain.py  test_localserver.py  test_logging.py  test_metadata.py  test_model.py  test_model_async.py  test_prompt_pattern.py  test_prompt_pattern_watsonx.py  test_prompt_saving.py  test_prompt_service_interface.py  test_prompt_template_manager.py  test_request_handler.py  test_save_huggingface.py  test_schema_validation.py  test_service_interface.py  test_service_interface_async.py  test_service_utils.py  test_sub_from_pandas.py  test_token.py  test_tunes.py  test_utils.py  test_version.py  utils.py
tests/assets/: age-gender.csv  capital-qa-content.txt  capital-qa-multivar.yaml  capital-qa-sub-noheader.csv  capital-qa-sub.csv  capital-qa-sub.json  capital-qa-sub.txt  csv_file.csv  csv_file.yaml  file_to_tune.json  file_to_tune.jsonl  invalid-content-template.yaml  invalid-template.yaml  penguins.csv  response_helper.py  story.yaml  story_sub.txt
tests/e2e/: test_examples.py
tests/extensions/: test_huggingface_agent.py  test_langchain.py  test_langchain_chat.py  test_llama_index.py  test_localserver.py  test_save_huggingface.py  test_sub_from_pandas.py
tests/integration/: __init__.py  (+3 more)
unitxt_example/: multi_label_example.json  multi_label_example.yaml  multi_label_template_example.json  unitxt_wrapper.py
(+376 files in other folders)
