[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.40.0", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ibm-generative-ai"
dynamic = ["version"]
authors = [
  {name="Lee Martie", email="lee.martie@ibm.com"},
  {name="Ana Fucs", email="ana.fucs@ibm.com"},
  {name="Veronique Demers", email="vdemers@ibm.com"},
  {name="Mairead O'Neill", email="moneill@ibm.com"},
  {name="Mirian Silva", email="mirianfrsilva@ibm.com"},
  {name="Onkar Bhardwaj", email="onkarbhardwaj@ibm.com"},
  {name="James Sutton", email="james.sutton@uk.ibm.com"},
]
description = "IBM Generative AI is a Python library built on IBM's large language model REST interface."
readme = "README.md"
dependencies = [
    "urllib3<2", # https://github.com/psf/requests/issues/6432
    "requests>=2.31.0",
    "pydantic>=1.10.9",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.4",
    "pyyaml>=0.2.5",
    "httpx>=0.24.1",
    "aiolimiter>=1.1.0",
    "tqdm>=4.65.0"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
  "pytest>=7.3.2",
  "pytest-dotenv>=0.5.2",
  "pre-commit>=3.3.2",
  "pytest-cov>=4.1.0",
  "sphinx>=6.1.3",
  "furo>=2022.12.7",
  "twine>=4.0.2",
  "pytest-asyncio>=0.21.0",
  "pytest-mock>=3.10.0",
  "setuptools-scm>=7.1.0",
  "pytest-httpx>=0.22.0",
  "build>=0.10.0"
]
langchain = [
  "langchain>=0.0.200"
]
huggingface = [
  "datasets>=2.13.0"
]
pandas = [
  "pandas>=2.0.0"
]
localserver = [
  "uvicorn>=0.22.0",
  "fastapi>=0.97.0"
]

# As new extensions are added, they should also be added
all = [
  "ibm-generative-ai[langchain, pandas, huggingface, localserver]"
]

[options]
package_dir=[
  "src"
]

[options.packages.find]
where=[
  "src/genai"
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --cov-fail-under 80"
markers = [
    "unit: tests that can run completely independently of the GENAI API",
    "integration: tests that require the GENAI API to run",
    "extension: tests for an extension"
]
env_files = [
    ".test.env"
]

[tool.coverage.run]
source = ["src"]

[tool.setuptools_scm]
write_to = "src/genai/_version.py"
local_scheme = "no-local-version"
