[tool.poetry]
name = "ibm-generative-ai"
authors = [
  "Tomas Dvorak <tomas.dvorak@ibm.com>",
  "Radek Jezek <radek.jezek@ibm.com>",
  "David Kristek <david.kristek@ibm.com>",
]
maintainers = [
  "Tomas Dvorak <tomas.dvorak@ibm.com>",
  "Radek Jezek <radek.jezek@ibm.com>",
]
description = "IBM Generative AI is a Python library built on IBM's large language model REST interface."
readme = "README.md"
version = "0.0.0"
packages = [{include = "genai", from="src"}]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
strict = true
metadata = false

[tool.poetry-dynamic-versioning.substitution]
folders = [
  { path = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0.0"
httpx = "^0.27.0"
aiolimiter = "^1.1.0"
httpx-sse = "^0.4.0"
langchain-core = { version = "^0.1.0", optional = true }
pyyaml = { version = "^6.0.0", optional = true }
transformers = { version = "^4.33.3",  optional = true, extras=["agents"] }
llama-index-core = { version = "^0.10.0", optional = true }
uvicorn = { version = "^0.22.0",  optional = true }
fastapi = { version = "^0.100.0",  optional = true }
deprecated = "^1.2.14"
lm-eval = { version = "^0.4.2",  optional = true }
tqdm = { version = "^4.66.1", optional = true }

[tool.black] # left for IDE compatibility (pycharm)
line-length = 120

[tool.ruff]
line-length = 120
extend-exclude = ['src/genai/_version.py']
target-version = "py39"

[tool.ruff.lint]
select = [ # See docs for available rules: https://docs.astral.sh/ruff/rules
  "B",   # bugbear (assignment to os.environ, assert False, ...)
  "C",   # mccabe (too complex structures, ...)
  "E",   # error (line too long, syntax error, ...)
  "F",   # pyflakes (unused imports, variables, ...)
  "I",   # isort
  "W",   # pycodestyle (indentation, whitespace, ...)
  "T20", # flake8-print (print found, pprint found, ...)
]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "F405"] # Ignore import violations in all `__init__.py` files.
"examples/**/*.py" = ["T201", "T203", "B904"] # Examples can include print and pprint, ignore exception propagation
"src/genai/schema/_api.py" = ["E501"] # Generated can include long lines
"tests/unit/docs_examples_generator/assets/**/*.py" = ["T201"] # Allow prints

[tool.ruff.lint.isort]
known-first-party = ["genai"]

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
datasets = "^2.18.0"
pytest = "^8.1.1"
pytest-dotenv = "^0.5.2"
pre-commit = "^3.6.2"
pytest-cov = "^4.1.0"
sphinx = "^7.2.6"
furo = "^2024.1.29"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.14.0"
datamodel-code-generator = { version="^0.25.2", extras=["http"] }
vcrpy = "^6.0.1"
pytest-recording = "^0.13.1"
pytest-subtests = "^0.11.0"
autodoc_pydantic = "^2.1.0"
ruff = "^0.3.3"
poethepoet = "^0.24.4"
pandas = "^2.2.1"
pyyaml = "^6.0.1"
tqdm = "^4.66.2"
sphinx-toolbox = "3.5.0"
git-changelog = "2.4.0"
gitchangelog = "3.0.4"
pystache = "0.6.5"
tabulate = "0.9.0"
m2r = "^0.3.1"
sphinx-multiversion = {path = "external/sphinx_multiversion"}
sphinx-copybutton = "^0.5.2"
sphinx-notfound-page = "^1.0.0"
langchain = "^0.1.4"
sqlalchemy = "^2.0.28"
pytest-httpx = "^0.30.0"


[tool.poetry.extras]
langchain = ["langchain-core", "pyyaml"]
huggingface = ["datasets", "transformers"]
llama-index = ["llama-index-core"]
lm-eval = ["lm-eval", "tqdm"]
localserver = ["uvicorn", "fastapi"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --cov-fail-under 80 -v"
testpaths = ["tests"]
markers = [
    "unit",
    "integration",
    "e2e",
    "extension"
]
env_files = [
    ".test.env"
]
pythonpath = ["src", "scripts"]

[tool.coverage.run]
source = ["src"]

[tool.setuptools_scm]
write_to = "src/genai/_version.py"
local_scheme = "no-local-version"

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src,$MYPY_CONFIG_FILE_DIR/scripts,$MYPY_CONFIG_FILE_DIR/tests"
exclude = "^build/$"
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.poe.tasks.install]
help = "Install dependencies for the SDK core and it's extensions"
cmd = "poetry install --all-extras --without dev"

[tool.poe.tasks.lm_eval]
help = "Run lm_eval with support for genai models"
cmd = "python -m genai.extensions.lm_eval"

[tool.poe.tasks.install-dev]
help = "Install dependencies and related tooling for development"
sequence = [{ cmd = "poetry install --all-extras" }, { cmd = "pre-commit install" }]
deps = ["install"]

[tool.poe.tasks.clean]
help = "Remove all artifacts and builds"
sequence = [
    { script = "shutil:rmtree('build/', ignore_errors=1)"},
    { script = "shutil:rmtree('dist/', ignore_errors=1)"},
    { ref = "docs --type=clear" }
]

[tool.poe.tasks.format]
help = "Run all formating tools"
sequence = [
  { "cmd" = "ruff format"}, # format code
  { "cmd" = "ruff check --select I --fix" } # sort imports
]


[tool.poe.tasks.lint]
help = "Check for errors and fix them using ruff (includes isort)"
cmd = "ruff check --fix"

[tool.poe.tasks.schema]
help = "Generate Pydantic models and endpoints information from OpenAPI"
env = { "PYTHONPATH" = "scripts" }
sequence = [{ cmd = "python scripts/types_generator/main.py" }, { ref = "format", "cwd" = "src/genai/schema"}]

[tool.poe.tasks._git]
control.expr = "type"
args = ["type"]

    [[tool.poe.tasks._git.switch]]
    case = "latest_tag"
    help = "Finds the latest released version (by GIT tag lookup)"
    shell = "git tag --sort version:refname | grep -E '[0-9]' | tail -1"

    [[tool.poe.tasks._git.switch]]
    case = "current_branch"
    help = "Gets the current branch name"
    shell = "git rev-parse --abbrev-ref HEAD"

[tool.poe.tasks.docs]
help = "Documentation related commands"
control.expr = "type"
args = ["type"]
uses = { LATEST_VERSION = "_git --type latest_tag", CURRENT_BRANCH="_git --type current_branch" }

    [[tool.poe.tasks.docs.switch]]
    case = "help"
    help = "Show help"
    cmd = "make"

    [[tool.poe.tasks.docs.switch]]
    case = "build"
    help = "Update sources for the documentation and build static HTML"
    sequence = [
        { shell = '[ -z "$(git status -uno --porcelain)" ] || { echo "Your index contains uncommitted changes! Commit them and try again." && exit 1; }' },
        "docs --type=clear",
        { cmd = "make docs", cwd = "documentation" },
        { cmd = 'python scripts/docs_root_redirect.py --prefix="${DOCS_URL_PREFIX}" --version="${LATEST_VERSION}" --output="./documentation/build"', env = { "PYTHONPATH" = "scripts" } },
    ]

    [[tool.poe.tasks.docs.switch]]
    case = "open"
    help = "Open HTML Documentation"
    cwd = "documentation"
    cmd = "open build/${CURRENT_BRANCH}/index.html"
    uses = { CURRENT_BRANCH="_git --type current_branch" }

    [[tool.poe.tasks.docs.switch]]
    case = "clear"
    help = "Remove build"
    cwd = "documentation"
    sequence = [{ "script" = "shutil:rmtree('build/', ignore_errors=1)" }, { "script" = "shutil:rmtree('source/rst_source', ignore_errors=1)" }]

[tool.poe.tasks.changelog]
help = "Changelog related commands"
control.expr = "type"
args = [
    { name = "type" },
    { name = "version", positional = true },
]

    [[tool.poe.tasks.changelog.switch]]
    case = "update"
    help = "Update unreleased changelog section"
    env = { "PYTHONPATH" = "scripts" }
    cmd = "python scripts/docs_changelog_generator/generate_changelog.py --debug"

    [[tool.poe.tasks.changelog.switch]]
    case = "release"
    help = "Sets version to the latest entry in the CHANGELOG"
    env = { "PYTHONPATH" = "scripts" }
    cmd = "python scripts/docs_changelog_generator/release_changelog.py $version"

[tool.poe.tasks.test]
args = ["type"]
control.expr = "type"

    [[tool.poe.tasks.test.switch]]
    case = "unit"
    help = "Run Unit Tests"
    cmd = "pytest -m 'unit'"

    [[tool.poe.tasks.test.switch]]
    case = "integration"
    help = "Run Integration Tests"
    cmd = "pytest -m 'integration' tests/integration"

    [[tool.poe.tasks.test.switch]]
    case = "extension"
    help = "Run Extension Tests"
    cmd = "pytest -m 'integration'"

    [[tool.poe.tasks.test.switch]]
    case = "e2e"
    help = "Run E2E Tests"
    cmd = "pytest -m 'e2e'"

    [[tool.poe.tasks.test.switch]]
    case = "rewrite_casettes"
    help = "Rewrite casettes for failed tests (usually due to API endpoint version update)"
    cmd = "scripts/rewrite_casettes.sh"

    [[tool.poe.tasks.test.switch]]
    case = "check_markers"
    help = "Check if all tests have proper markers (unit, integration or e2e)"
    cmd = "scripts/check_markers.sh"

    [[tool.poe.tasks.test.switch]]
    help = "Run All Tests"
    cmd = "pytest"
